--- a/css/global.css
+++ b/css/global.css
@@ -15,8 +15,8 @@
 .btn-danger { @apply bg-red-600 hover:bg-red-700 focus:ring-red-500; }
 
 /* Tailwind-like input field styles */
-.input-field { @apply mt-1 block w-full px-2 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-teal-500 focus:border-teal-500 sm:text-sm; }
-.table-input { @apply bg-teal-200}
+.input-field { @apply mt-1 block w-full px-1 py-1 bg-white border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-gray-700 focus:border-gray-700 sm:text-sm; }
+.table-input { @apply bg-teal-200 px-0.5 py-0.1 mx-0 h-6}
 
 
 /* Tailwind-like card styles */
@@ -26,8 +26,9 @@
 .modal-container { @apply fixed inset-0 z-50 w-screen overflow-y-auto bg-gray-900/75 transition-opacity; }
 .modal-panel { @apply relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg; }
 
-.compact-th {@apply px-1 py-1}
-.compact-td {@apply px-1 py-1}
+.compact-th {@apply px-0 py-0 mx-0}
+.compact-td {@apply px-0 py-0 mx-0}
+.compact-tr {@apply px-0 py-0.5 gap-2}
 
 /* Hide number spinners */
 @layer base {
