--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -50,6 +50,7 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --default-transition-duration: 150ms;
@@ -360,6 +361,9 @@
   .max-w-7xl {
     max-width: var(--container-7xl);
   }
+  .max-w-30 {
+    max-width: calc(var(--spacing) * 30);
+  }
   .max-w-md {
     max-width: var(--container-md);
   }
@@ -481,6 +485,11 @@
       border-color: var(--color-gray-200);
     }
   }
+  .truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .overflow-x-auto {
     overflow-x: auto;
   }
@@ -563,6 +572,9 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -938,23 +950,23 @@
   margin-top: calc(var(--spacing) * 1);
   display: block;
   width: 100%;
-  border-radius: var(--radius-md);
+  border-radius: var(--radius-sm);
   border-style: var(--tw-border-style);
   border-width: 1px;
   border-color: var(--color-gray-300);
   background-color: var(--color-white);
-  padding-inline: calc(var(--spacing) * 2);
-  padding-block: calc(var(--spacing) * 2);
+  padding-inline: calc(var(--spacing) * 1);
+  padding-block: calc(var(--spacing) * 1);
   &::placeholder {
     color: var(--color-gray-400);
   }
   --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   &:focus {
-    border-color: var(--color-teal-500);
+    border-color: var(--color-gray-700);
   }
   &:focus {
-    --tw-ring-color: var(--color-teal-500);
+    --tw-ring-color: var(--color-gray-700);
   }
   &:focus {
     --tw-outline-style: none;
@@ -966,7 +978,11 @@
   }
 }
 .table-input {
+  margin-inline: calc(var(--spacing) * 0);
+  height: calc(var(--spacing) * 6);
   background-color: var(--color-teal-200);
+  padding-inline: calc(var(--spacing) * 0.5);
+  padding-block: calc(var(--spacing) * 0);
 }
 .card {
   margin-bottom: calc(var(--spacing) * 4);
@@ -1016,12 +1032,18 @@
   }
 }
 .compact-th {
-  padding-inline: calc(var(--spacing) * 1);
+  margin-inline: calc(var(--spacing) * 0);
+  padding-inline: calc(var(--spacing) * 0);
   padding-block: calc(var(--spacing) * 1);
 }
 .compact-td {
-  padding-inline: calc(var(--spacing) * 1);
-  padding-block: calc(var(--spacing) * 1);
+  margin-inline: calc(var(--spacing) * 0);
+  padding-inline: calc(var(--spacing) * 0);
+  padding-block: calc(var(--spacing) * 0);
+}
+.compact-tr {
+  padding-inline: calc(var(--spacing) * 0);
+  padding-block: calc(var(--spacing) * 0.5);
 }
 @layer base {
   input[type='number']::-webkit-outer-spin-button, input[type='number']::-webkit-inner-spin-button, input[type='number'] {
