--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,8 @@
 
 /* Tailwind-like input field styles */
 .input-field { @apply mt-1 block w-full px-1 py-1 bg-white border border-gray-300 rounded-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-gray-700 focus:border-gray-700 sm:text-sm; }
-.table-input { @apply bg-teal-200 px-0.5 py-0.1 mx-0 h-6}
+.table-field { @apply bg-transparent text-center w-full h-full px-1}
+.table-text { @apply bg-transparent text-left w-full h-full px-1}
 
 
 /* Tailwind-like card styles */
@@ -27,7 +28,7 @@
 .modal-panel { @apply relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg; }
 
 .compact-th {@apply px-0 py-0 mx-0}
-.compact-td {@apply px-0 py-0 mx-0}
+.compact-td {@apply border border-slate-400 p-0 truncate}
 .compact-tr {@apply px-0 py-0.5 gap-2}
 
 /* Hide number spinners */
