--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -15,11 +15,11 @@
     --color-lime-50: oklch(98.6% 0.031 120.757);
     --color-lime-100: oklch(96.7% 0.067 122.328);
     --color-lime-200: oklch(93.8% 0.127 124.321);
-    --color-teal-200: oklch(91% 0.096 180.426);
     --color-teal-500: oklch(70.4% 0.14 182.503);
     --color-teal-600: oklch(60% 0.118 184.704);
     --color-teal-700: oklch(51.1% 0.096 186.391);
     --color-teal-900: oklch(38.6% 0.063 188.416);
+    --color-slate-400: oklch(70.4% 0.04 256.788);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -319,6 +319,9 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-full {
+    height: 100%;
+  }
   .max-h-\[60vh\] {
     max-height: 60vh;
   }
@@ -349,6 +352,9 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
+  .w-28 {
+    width: calc(var(--spacing) * 28);
+  }
   .w-30 {
     width: calc(var(--spacing) * 30);
   }
@@ -370,6 +376,24 @@
   .max-w-sm {
     max-width: var(--container-sm);
   }
+  .min-w-6 {
+    min-width: calc(var(--spacing) * 6);
+  }
+  .min-w-8 {
+    min-width: calc(var(--spacing) * 8);
+  }
+  .min-w-10 {
+    min-width: calc(var(--spacing) * 10);
+  }
+  .min-w-12 {
+    min-width: calc(var(--spacing) * 12);
+  }
+  .min-w-14 {
+    min-width: calc(var(--spacing) * 14);
+  }
+  .min-w-30 {
+    min-width: calc(var(--spacing) * 30);
+  }
   .min-w-full {
     min-width: 100%;
   }
@@ -381,6 +405,9 @@
   }
   .flex-grow {
     flex-grow: 1;
+  }
+  .table-auto {
+    table-layout: auto;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -471,20 +498,6 @@
       margin-inline-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
-  .divide-y {
-    :where(& > :not(:last-child)) {
-      --tw-divide-y-reverse: 0;
-      border-bottom-style: var(--tw-border-style);
-      border-top-style: var(--tw-border-style);
-      border-top-width: calc(1px * var(--tw-divide-y-reverse));
-      border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    }
-  }
-  .divide-gray-200 {
-    :where(& > :not(:last-child)) {
-      border-color: var(--color-gray-200);
-    }
-  }
   .truncate {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -528,6 +541,9 @@
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
+  .border-slate-400 {
+    border-color: var(--color-slate-400);
+  }
   .border-teal-500 {
     border-color: var(--color-teal-500);
   }
@@ -548,6 +564,9 @@
   }
   .bg-red-100 {
     background-color: var(--color-red-100);
+  }
+  .bg-transparent {
+    background-color: transparent;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -977,12 +996,19 @@
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
 }
-.table-input {
-  margin-inline: calc(var(--spacing) * 0);
-  height: calc(var(--spacing) * 6);
-  background-color: var(--color-teal-200);
-  padding-inline: calc(var(--spacing) * 0.5);
-  padding-block: calc(var(--spacing) * 0);
+.table-field {
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  padding-inline: calc(var(--spacing) * 1);
+  text-align: center;
+}
+.table-text {
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  padding-inline: calc(var(--spacing) * 1);
+  text-align: left;
 }
 .card {
   margin-bottom: calc(var(--spacing) * 4);
@@ -1034,14 +1060,19 @@
 .compact-th {
   margin-inline: calc(var(--spacing) * 0);
   padding-inline: calc(var(--spacing) * 0);
-  padding-block: calc(var(--spacing) * 1);
-}
-.compact-td {
-  margin-inline: calc(var(--spacing) * 0);
-  padding-inline: calc(var(--spacing) * 0);
   padding-block: calc(var(--spacing) * 0);
 }
+.compact-td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  border-style: var(--tw-border-style);
+  border-width: 1px;
+  border-color: var(--color-slate-400);
+  padding: calc(var(--spacing) * 0);
+}
 .compact-tr {
+  gap: calc(var(--spacing) * 2);
   padding-inline: calc(var(--spacing) * 0);
   padding-block: calc(var(--spacing) * 0.5);
 }
@@ -1078,11 +1109,6 @@
   initial-value: 0;
 }
 @property --tw-space-x-reverse {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-divide-y-reverse {
   syntax: "*";
   inherits: false;
   initial-value: 0;
@@ -1180,7 +1206,6 @@
       --tw-skew-y: initial;
       --tw-space-y-reverse: 0;
       --tw-space-x-reverse: 0;
-      --tw-divide-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
