--- a/css/global.css
+++ b/css/global.css
@@ -17,7 +17,7 @@ body { @apply
 nav {@apply
   dark:bg-gray-700 dark:text-teal-400
 }
-.nav-text {@apply font-thin
+.nav-text {@apply font-normal
   text-teal-600
   dark:text-teal-400
 }
